--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,56 @@
+@article{martinez2020characterizing,
+  title={Characterizing emerging canine H3 influenza viruses},
+  author={Martinez-Sobrido, Luis and Blanco-Lobo, Pilar and Rodriguez, Laura and Fitzgerald, Theresa and Zhang, Hanyuan and Nguyen, Phuong and Anderson, Christopher S and Holden-Wiltse, Jeanne and Bandyopadhyay, Sanjukta and Nogales, Aitor and others},
+  journal={PLoS pathogens},
+  volume={16},
+  number={4},
+  pages={e1008409},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+
+@techreport{chang1976influenza,
+  title={Influenza virus isolations from dogs during a human epidemic in Taiwan},
+  author={Chang, CP and New, AE and Taylor, JF and Chiang, HS},
+  year={1976},
+  institution={NAVAL MEDICAL RESEARCH UNIT NO 2 MANILA (PHILIPPINES)}
+}
+
+@article{houser1980evidence,
+  title={Evidence of prior infection with influenza A/Texas/77 (H3N2 (virus in dogs with clinical parainfluenza.},
+  author={Houser, RE and Heuschele, WP},
+  journal={Canadian Journal of Comparative Medicine},
+  volume={44},
+  number={4},
+  pages={396},
+  year={1980},
+  publisher={Canadian Veterinary Medical Association}
+}
+
+@article{chen2018emergence,
+  title={Emergence and evolution of novel reassortant influenza A viruses in canines in Southern China},
+  author={Chen, Ying and Trov{\~a}o, N{\'\i}dia S and Wang, Guojun and Zhao, Weifeng and He, Ping and Zhou, Huabo and Mo, Yanning and Wei, Zuzhang and Ouyang, Kang and Huang, Weijian and others},
+  journal={MBio},
+  volume={9},
+  number={3},
+  pages={e00909--18},
+  year={2018},
+  publisher={Am Soc Microbiol}
+}
+
+@article{lowen2017constraints,
+  title={Constraints, drivers, and implications of influenza A virus reassortment},
+  author={Lowen, Anice C},
+  journal={Annual review of virology},
+  volume={4},
+  pages={105--121},
+  year={2017},
+  publisher={Annual Reviews}
+}
+
+
+
 @article{wood2012reproducibility,
   title={Reproducibility of serology assays for pandemic influenza H1N1: collaborative study to evaluate a candidate WHO International Standard},
   author={Wood, John M and Major, Diane and Heath, Alan and Newman, Robert W and H{\"o}schler, Katja and Stephenson, Iain and Clark, Tristan and Katz, Jacqueline M and Zambon, Maria C},
