--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -63,3 +63,9 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\qdist{E-distance\xspace}
 \def\cov{COVID-19\xspace}
 \def\infl{Influenza A\xspace}
+%\def\infl{IAV\xspace}
+
+
+\def\E{\mathcal{E}}
+\def\dst{x_\star^{t+\delta}}
+\def\dsta{x^{t+\delta}}
