--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -29,7 +29,7 @@
 \def\authord{Ishanu Chattopadhyay}
 
 \def\addressa{Department of Medicine, University of Chicago, IL, USA}
-\def\addressb{Committee on Genetics, Genomics \& Systems BioloScalegy, University of Chicago, IL, USA}
+\def\addressb{Committee on Genetics, Genomics \& Systems Biology, University of Chicago, IL, USA}
 \def\addressc{Committee on Quantitative Methods in Social, Behavioral, and Health Sciences, University of Chicago, IL, USA}
 \def\addressd{Pritzker School of Molecular Engineering, University of Chicago, Chicago, IL, USA}
 \def\addresse{Committee on Immunology, University of Chicago, Chicago, IL, USA}
