--- a/tex/figuresandtables.tex
+++ b/tex/figuresandtables.tex
@@ -66,7 +66,7 @@
   % \vspace{0pt}   
   
   % \else 
-  \includegraphics[width=0.9\textwidth]{Figures/External/IRAT_combined.png}
+  \includegraphics[width=\textwidth]{Figures/External/IRAT_combined.png}
  % \fi
   \captionN{\textbf{IRAT emergence risk vs. q-distance}. There is an approximate linear relationship between average q-distance from human circulating strains (averaged across both HA and NA) and IRAT emergence risk grade. Note that IRAT has released results for 23 strains to date, but only 15 are plotted on the graph. This is because the strains not pictured have less than 30 human strains of the same sub-type, so a sufficiently representative \qnet could not be trained.
   }\label{figirat}
@@ -83,7 +83,27 @@
 
 \sffamily\fontsize{7}{8}\selectfont
 
-\input{Figures/tabdata/IRAT_average_qdistances}
+\input{Figures/tabdata/irat_predictions}
+\flushleft
+
+\fontsize{8}{8}\selectfont
+$^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
+$^{\star\star}$ Could not construct a \qnet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \qnet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
+$^{\star\star\star}$ These strains did not have enough human sequence data to generate a \qnet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \qnet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
+\end{table}
+\else
+\refstepcounter{table}\label{irattab}
+\fi
+% #############################################
+%#############################################
+\ifFIGS
+
+\begin{table}[!ht]\centering
+\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \qnet Computed Risk Scores}\label{irattab}
+
+\sffamily\fontsize{7}{8}\selectfont
+
+\input{Figures/tabdata/irat_predictions_current}
 \flushleft
 
 \fontsize{8}{8}\selectfont
@@ -91,4 +111,27 @@ $^\star$ -1 indicates missing data, either from lack of human sequence data avai
 \end{table}
 \else
 \refstepcounter{table}\label{irattab}
+\fi
+% #############################################
+
+
+\ifFIGS
+
+\begin{figure}[t]
+  \tikzexternalenable
+  \tikzsetnextfilename{bionorad}
+  \centering
+  %\tikzXtrue
+
+  
+  \iftikzX  
+  \input{Figures/figbionorad}
+ \else
+  \includegraphics[width=\textwidth]{Figures/External/bionorad}
+  \fi 
+  \vspace{0pt}
+\captionN{Emergence risk evaluation at scale on all 2021-2022 strains collected around the world. 6,254 sequences, total evaluation time: $<$ 15hrs. Size of the markers scale with risk}\label{figbionorad}
+\end{figure}
+\else
+\refstepcounter{figure}\label{figbionorad}
 \fi
