--- a/irat_qnet/animal_predictions.ipynb
+++ b/irat_qnet/animal_predictions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "6b182d89",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "51eb26fe",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "b096f47a",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "id": "fd14e89b",
    "metadata": {},
    "outputs": [],
@@ -340,25 +340,27 @@
     "def parse_fasta2(file_name, trunc):\n",
     "    name = []\n",
     "    acc = []\n",
+    "    subtype = []\n",
     "    for record in SeqIO.parse(file_name, 'fasta'):\n",
     "        if len(record.seq) < trunc:\n",
     "            continue\n",
     "        name.append(record.id.split('|')[0])\n",
     "        acc.append(record.id.split('|')[4])\n",
-    "    df = pd.DataFrame({'id':name, 'accession':acc})\n",
+    "        subtype.append(record.id.split('|')[1][-4:])\n",
+    "    df = pd.DataFrame({'id':name, 'subtype':subtype, 'accession':acc})\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 29,
    "id": "bd8583bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3b793bf4720454cb212c9e1b08dc4a0",
+       "model_id": "5b7339bec76c4ce3947d4a1d8cbb26f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,68 +371,6 @@
      "metadata": {},
      "output_type": "display_data"
     },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "938 938\n",
-      "785 784\n",
-      "828 826\n",
-      "1627 1598\n",
-      "21 20\n",
-      "140 140\n",
-      "1448 1382\n",
-      "145 143\n",
-      "243 235\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_merged = pd.DataFrame({})\n",
-    "\n",
-    "for FILE in tqdm(FILES):\n",
-    "    ha_df = parse_fasta2(DATA_DIR + FILE + '_ha.fasta', HA_TRUNC)\n",
-    "    na_df = parse_fasta2(DATA_DIR + FILE + '_na.fasta', NA_TRUNC)\n",
-    "    \n",
-    "    df1 = ha_df.merge(na_df, how='inner', on='id')\n",
-    "    df1.rename(columns={'accession_x':'ha_accession', 'accession_y':'na_accession'}, inplace=True)\n",
-    "    df1['subtype'] = [FILE.upper()]*len(df1)\n",
-    "    \n",
-    "    df2 = pd.read_csv(OUT_DIR + FILE + '.csv')\n",
-    "    \n",
-    "    df3 = df1.merge(df2, how='inner', on='id').drop_duplicates(subset=['id'])\n",
-    "    df3 = df3[df3['id'] != 'not_release_-_host_x_isolate_name_not_match']\n",
-    "    print(len(ha_df), len(df3))\n",
-    "    \n",
-    "    if len(df_merged) == 0:\n",
-    "        df_merged = df3\n",
-    "    else:\n",
-    "        df_merged = df_merged.append(df3, ignore_index=True)\n",
-    "\n",
-    "df_merged.to_csv(OUT_DIR + 'combined_results.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "id": "1db1f1d2",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
-    "#     display(df_merged)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "id": "ad762eb5",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -453,9 +393,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
+       "      <th>subtype</th>\n",
        "      <th>ha_accession</th>\n",
        "      <th>na_accession</th>\n",
-       "      <th>subtype</th>\n",
        "      <th>ha</th>\n",
        "      <th>na</th>\n",
        "      <th>HA_Avg_Qdist</th>\n",
@@ -471,9 +411,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A/swine/Missouri/A02524459/2020</td>\n",
+       "      <td>H1N1</td>\n",
        "      <td>EPI1765551</td>\n",
        "      <td>EPI1765552</td>\n",
-       "      <td>H1N1</td>\n",
        "      <td>MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "      <td>MNANQRIIAIGTVCMIVGIISLLLQIGNIVSLWISHSIQTGWENHT...</td>\n",
        "      <td>0.014602</td>\n",
@@ -487,9 +427,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A/swine/Ohio/A02524448/2020</td>\n",
+       "      <td>H1N1</td>\n",
        "      <td>EPI1765553</td>\n",
        "      <td>EPI1765554</td>\n",
-       "      <td>H1N1</td>\n",
        "      <td>MKAVLVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "      <td>MNTNQRIITIGTVCLIVGIISLLLQIGNIVSLWVSHSIQTRWENHT...</td>\n",
        "      <td>0.019032</td>\n",
@@ -503,9 +443,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>A/swine/South_Dakota/A02524453/2020</td>\n",
+       "      <td>H1N1</td>\n",
        "      <td>EPI1765555</td>\n",
        "      <td>EPI1765556</td>\n",
-       "      <td>H1N1</td>\n",
        "      <td>MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "      <td>MNTNQRIITIGTVCMIVGIISLLLQIGNIVSLWISHSIQIEWENHT...</td>\n",
        "      <td>0.015378</td>\n",
@@ -519,9 +459,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>A/swine/Indiana/A02524458/2020</td>\n",
+       "      <td>H1N1</td>\n",
        "      <td>EPI1765559</td>\n",
        "      <td>EPI1765560</td>\n",
-       "      <td>H1N1</td>\n",
        "      <td>MKAVLVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "      <td>MNTNQRIITIGTVCLIVGIISLLLQIGNIVSLWVSHSIQTRWENHT...</td>\n",
        "      <td>0.019020</td>\n",
@@ -535,9 +475,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>A/swine/Iowa/A02479424/2020</td>\n",
+       "      <td>H1N1</td>\n",
        "      <td>EPI1766606</td>\n",
        "      <td>EPI1766607</td>\n",
-       "      <td>H1N1</td>\n",
        "      <td>MKAVLVVMLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
        "      <td>MNTNQRIITIGTVCLIVGIISLLLQIGNIVSLWVSHSIQTRWENHT...</td>\n",
        "      <td>0.016578</td>\n",
@@ -567,9 +507,9 @@
        "    <tr>\n",
        "      <th>6061</th>\n",
        "      <td>A/chicken/Guangdong/F94/2022</td>\n",
+       "      <td>H9N2</td>\n",
        "      <td>EPI2167482</td>\n",
        "      <td>EPI2167484</td>\n",
-       "      <td>H9N2</td>\n",
        "      <td>MKTVSLITILLAATVSNADKICIGYQSTNSTETVDTLTENNVPVTH...</td>\n",
        "      <td>MNPNQKITAIGSVSLIIAIICLLMQIAILTTTMTLHFGQKECSNPL...</td>\n",
        "      <td>0.021926</td>\n",
@@ -583,9 +523,9 @@
        "    <tr>\n",
        "      <th>6062</th>\n",
        "      <td>A/chicken/Guangdong/F99/2022</td>\n",
+       "      <td>H9N2</td>\n",
        "      <td>EPI2167503</td>\n",
        "      <td>EPI2167506</td>\n",
-       "      <td>H9N2</td>\n",
        "      <td>MEAVSLITILLAATVSNADKICIGYQSTNSTETVDTLTENNVPVTH...</td>\n",
        "      <td>MNPNQKITAIGSVSLIIAIICLLMQIAILTTTMTLHFRQKECSNPS...</td>\n",
        "      <td>0.018988</td>\n",
@@ -599,9 +539,9 @@
        "    <tr>\n",
        "      <th>6063</th>\n",
        "      <td>A/chicken/Egypt/Menoufia/2021</td>\n",
+       "      <td>H9N2</td>\n",
        "      <td>EPI2175832</td>\n",
        "      <td>EPI2175833</td>\n",
-       "      <td>H9N2</td>\n",
        "      <td>MEVIPLMIMLLLVTTNNADKICIGHQSTNSTETVDTLTETGVPVTH...</td>\n",
        "      <td>MNPNQRIIALGSASLTVATICLLIQIAILATTMTLHFKQNEYANTS...</td>\n",
        "      <td>0.055346</td>\n",
@@ -615,9 +555,9 @@
        "    <tr>\n",
        "      <th>6064</th>\n",
        "      <td>A/chicken/South_Korea/SL20/2020</td>\n",
+       "      <td>H9N2</td>\n",
        "      <td>EPI2176583</td>\n",
        "      <td>EPI2176585</td>\n",
-       "      <td>H9N2</td>\n",
        "      <td>METVSLITILVVATVSSADKICIGYQSTNSTETVDTLTENNVPVTH...</td>\n",
        "      <td>MNPNQKITAIGSVSLIIAIICLLMQIAILTTTMTFHFGQKECSNPS...</td>\n",
        "      <td>0.029999</td>\n",
@@ -631,9 +571,9 @@
        "    <tr>\n",
        "      <th>6065</th>\n",
        "      <td>A/Greylag_Goose/South_Korea/SW21/2021</td>\n",
+       "      <td>H9N2</td>\n",
        "      <td>EPI2188134</td>\n",
        "      <td>EPI2188136</td>\n",
-       "      <td>H9N2</td>\n",
        "      <td>METIALVAILLMATASNADKICIGYQSTNSTETVDTLIENNVPVTH...</td>\n",
        "      <td>MNPNQKIITIGSVSLTIAIVCFLMQIAILATTITLHFKQNECSIPS...</td>\n",
        "      <td>0.046408</td>\n",
@@ -650,18 +590,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         id ha_accession na_accession subtype  \\\n",
-       "0           A/swine/Missouri/A02524459/2020   EPI1765551   EPI1765552    H1N1   \n",
-       "1               A/swine/Ohio/A02524448/2020   EPI1765553   EPI1765554    H1N1   \n",
-       "2       A/swine/South_Dakota/A02524453/2020   EPI1765555   EPI1765556    H1N1   \n",
-       "3            A/swine/Indiana/A02524458/2020   EPI1765559   EPI1765560    H1N1   \n",
-       "4               A/swine/Iowa/A02479424/2020   EPI1766606   EPI1766607    H1N1   \n",
-       "...                                     ...          ...          ...     ...   \n",
-       "6061           A/chicken/Guangdong/F94/2022   EPI2167482   EPI2167484    H9N2   \n",
-       "6062           A/chicken/Guangdong/F99/2022   EPI2167503   EPI2167506    H9N2   \n",
-       "6063          A/chicken/Egypt/Menoufia/2021   EPI2175832   EPI2175833    H9N2   \n",
-       "6064        A/chicken/South_Korea/SL20/2020   EPI2176583   EPI2176585    H9N2   \n",
-       "6065  A/Greylag_Goose/South_Korea/SW21/2021   EPI2188134   EPI2188136    H9N2   \n",
+       "                                         id subtype ha_accession na_accession  \\\n",
+       "0           A/swine/Missouri/A02524459/2020    H1N1   EPI1765551   EPI1765552   \n",
+       "1               A/swine/Ohio/A02524448/2020    H1N1   EPI1765553   EPI1765554   \n",
+       "2       A/swine/South_Dakota/A02524453/2020    H1N1   EPI1765555   EPI1765556   \n",
+       "3            A/swine/Indiana/A02524458/2020    H1N1   EPI1765559   EPI1765560   \n",
+       "4               A/swine/Iowa/A02479424/2020    H1N1   EPI1766606   EPI1766607   \n",
+       "...                                     ...     ...          ...          ...   \n",
+       "6061           A/chicken/Guangdong/F94/2022    H9N2   EPI2167482   EPI2167484   \n",
+       "6062           A/chicken/Guangdong/F99/2022    H9N2   EPI2167503   EPI2167506   \n",
+       "6063          A/chicken/Egypt/Menoufia/2021    H9N2   EPI2175832   EPI2175833   \n",
+       "6064        A/chicken/South_Korea/SL20/2020    H9N2   EPI2176583   EPI2176585   \n",
+       "6065  A/Greylag_Goose/South_Korea/SW21/2021    H9N2   EPI2188134   EPI2188136   \n",
        "\n",
        "                                                     ha  \\\n",
        "0     MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...   \n",
@@ -718,19 +658,78 @@
        "[6066 rows x 13 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_merged = pd.DataFrame({})\n",
+    "\n",
+    "for FILE in tqdm(FILES):\n",
+    "    ha_df = parse_fasta2(DATA_DIR + FILE + '_ha.fasta', HA_TRUNC)\n",
+    "    na_df = parse_fasta2(DATA_DIR + FILE + '_na.fasta', NA_TRUNC)\n",
+    "    \n",
+    "    df1 = ha_df.merge(na_df, how='inner', on='id').drop(columns=['subtype_y'])\n",
+    "    df1.rename(columns={'subtype_x':'subtype','accession_x':'ha_accession', 'accession_y':'na_accession'}, inplace=True)\n",
+    "    #df1['subtype'] = [FILE.upper()]*len(df1)\n",
+    "    \n",
+    "    df2 = pd.read_csv(OUT_DIR + FILE + '.csv')\n",
+    "    \n",
+    "    df3 = df1.merge(df2, how='inner', on='id').drop_duplicates(subset=['id'])\n",
+    "    df3 = df3[df3['id'] != 'not_release_-_host_x_isolate_name_not_match']\n",
+    "    \n",
+    "    if len(df_merged) == 0:\n",
+    "        df_merged = df3\n",
+    "    else:\n",
+    "        df_merged = df_merged.append(df3, ignore_index=True)\n",
+    "\n",
+    "df_merged.to_csv(OUT_DIR + 'combined_results.csv', index=False)\n",
     "df_merged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "306753a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subtype\n",
+       "H1N1     938\n",
+       "H1N2     784\n",
+       "H3N2     826\n",
+       "H5N1    1598\n",
+       "H5N2      20\n",
+       "H5N6     140\n",
+       "H5N8    1382\n",
+       "H7N1       3\n",
+       "H7N2       1\n",
+       "H7N3      99\n",
+       "H7N5       1\n",
+       "H7N6       8\n",
+       "H7N7      11\n",
+       "H7N8       3\n",
+       "H7N9      17\n",
+       "H9N2     235\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merged.groupby(by='subtype').count()['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be1f812",
    "metadata": {},
    "outputs": [],
    "source": []
