--- a/tex/Figures/figbionorad.tex
+++ b/tex/Figures/figbionorad.tex
@@ -1,4 +1,4 @@
 \begin{tikzpicture}[font=\bf\sffamily\fontsize{8}{8}\selectfont]
-  \clip (-2.7in,1.450in) rectangle (2.6in,-0.9in);
-\node[anchor=center] (A) at (0,0) {\includegraphics[width=\textwidth]{Figures/bionorad_wcol}};
+  \clip (-2.8in,1.50in) rectangle (3.35in,-0.5in);
+\node[anchor=center] (A) at (0,0) {\includegraphics[width=\textwidth]{Figures/bionorad}};
 \end{tikzpicture}
